--- a/src/main/resources/assets/rpginventory/lang/en_us.json
+++ b/src/main/resources/assets/rpginventory/lang/en_us.json
@@ -36,7 +36,7 @@
 	"hud.action_impaired.overburdened": "You are overburdened",
 
 	"hud.message.backpackAttributesNotInstalled": "Install 'Backpack Attribute' to use this feature",
-	"hud.message.rpgCraftingNotInstalled": "This feature is WIP",
+	"hud.message.rpgCraftingNotInstalled": "Install 'RPG Crafting' to use this feature",
 	"hud.message.nonTwoHandedWeaponEquipped": "Your weapon can't be two-handed",
 	"hud.message.spellsRemovedFromInactiveSpellSlots": "The maximum amount of spells you can equip was lowered and some items were transferred to your normal inventory. If your inventory was full, they were dropped at your location.",
 	"hud.message.weaponsAreSheathed": "Your weapons are sheathed already",
